syntax = "proto3";
option java_package = "org.opennms.features.kafka.collection.persistence";
option java_outer_classname = "CollectionSetProtos";

enum Type {
GAUGE = 0;
COUNTER = 1;
}

message StringAttribute {
  string key = 1;  
  string value = 2;
}

message NumericAttribute {
  string name= 1;  
  double value = 2;
  Type type = 3; 
  string group = 4;
}

message NodeLevelResource {
  int64 nodeId = 1;
  string foreignSource = 2;
  string foreignId = 3;
  string label = 4;
  string location = 5;
}

message InterfaceLevelResource {
  NodeLevelResource  node = 1;
  string label = 2;
}

message GenericResource {
 NodeLevelResource  node = 1;
 string name = 2;
 string instance = 3;
}



message CollectionSetResource {
  oneof resource {
     NodeLevelResource node = 3;
     InterfaceLevelResource interface = 4;
     GenericResource generic= 5;
  }
  repeated StringAttribute string = 1;
  repeated NumericAttribute  numeric= 2;
}

message CollectionSet {
  int64 timestamp = 1;
  repeated CollectionSetResource resource = 2;
}
